<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:background="@color/colorPrimary"-->
    <!--android:orientation="vertical">-->

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_size"
        android:layout_marginBottom="@dimen/view_margin_big"
        android:background="@color/colorLight" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/view_margin_big"
        android:gravity="start"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/filter_title_width"
            android:layout_height="wrap_content"
            android:background="@color/colorLight"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:padding="@dimen/text_padding_min"
            android:text="@string/sorted_by"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_large" />

        <Spinner
            android:id="@+id/sorted_spinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/text_margin_min" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/view_margin_big"
        android:gravity="start"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/filter_title_width"
            android:layout_height="wrap_content"
            android:background="@color/colorLight"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:padding="@dimen/text_padding_min"
            android:text="@string/source"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_large" />

        <Spinner
            android:id="@+id/source_spinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/text_margin_min" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/view_margin_big"
        android:gravity="start"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/filter_title_width"
            android:layout_height="wrap_content"
            android:background="@color/colorLight"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:padding="@dimen/text_padding_min"
            android:text="@string/from"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_large" />

        <EditText
            android:id="@+id/from_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin_min"
            android:editable="false"
            android:ellipsize="end"
            android:focusable="false"
            android:gravity="center"
            android:hint="@string/hint_date"
            android:lines="1"
            android:textColor="@color/colorLight"
            android:textSize="@dimen/text_size_large"
            tools:ignore="TextFields"
            tools:text="12-Jun-2019" />

        <ImageButton
            android:id="@+id/btn_clear_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:alpha="0.7"
            android:background="@android:color/transparent"
            android:paddingEnd="@dimen/view_padding_min"
            android:paddingStart="@dimen/view_padding_min"
            android:src="@drawable/ic_drawer_close"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/view_margin_big"
        android:gravity="start"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/filter_title_width"
            android:layout_height="wrap_content"
            android:background="@color/colorLight"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:padding="@dimen/text_padding_min"
            android:text="@string/to"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_large" />

        <EditText
            android:id="@+id/to_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin_min"
            android:editable="false"
            android:ellipsize="end"
            android:focusable="false"
            android:gravity="center"
            android:hint="@string/hint_date"
            android:lines="1"
            android:textColor="@color/colorLight"
            android:textSize="@dimen/text_size_large"
            tools:ignore="TextFields"
            tools:text="25-Jun-2019" />

        <ImageButton
            android:id="@+id/btn_clear_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:alpha="0.7"
            android:background="@android:color/transparent"
            android:paddingEnd="@dimen/view_padding_min"
            android:paddingStart="@dimen/view_padding_min"
            android:src="@drawable/ic_drawer_close"
            tools:ignore="ContentDescription" />
    </LinearLayout>
</merge>